# translatarr

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
backend/translatarr/: __init__.py  audio.py  models.py  pipeline.py  sync_checker.py  transcriber.py
backend/translatarr_web/: __init__.py  database.py  jellyfin.py  radarr.py  scanner.py  scheduler.py  settings.py  sonarr.py  task_manager.py  translatarr.py
backend/translatarr_web/blueprints/: __init__.py  movies.py  series.py  settings.py  system.py  tasks.py
docker/: Dockerfile  entrypoint.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  api.ts  lang.ts  router.ts
frontend/src/components/: AppHeader.vue  AppSidebar.vue  ConfirmModal.vue  FolderPicker.vue  SearchBox.vue  TaskProgress.vue
frontend/src/composables/: useIntegrationSettings.ts
mkv2srt/: __init__.py  __main__.py  audio.py  cli.py  models.py  pipeline.py  srt_io.py  sync_checker.py  transcriber.py  translator.py
tests/: test_models.py  test_resolve_output.py  test_scan.py  test_sync_checker.py  test_translator.py
tests/core/: test_models.py  test_pipeline.py  test_sync_checker.py  test_translator.py
tests/web/: conftest.py  test_api_history.py  test_api_series_movies.py  test_api_settings.py  test_api_system_tasks.py  test_generate_after_scan.py  test_log_handler.py  test_radarr.py  test_scanner.py  test_settings.py  test_sonarr.py
translatarr/: audio.py  srt_io.py  sync_checker.py  transcriber.py  translator.py
translatarr_web/: log_handler.py  media.py  settings.py  translatarr.py
translatarr_web/blueprints/: history.py  movies.py  settings.py
translatarr_web/static/: index.html
(+18 files in other folders)
