[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "mkv2srt"
version     = "1.0.0"
description = "Generate French subtitles (.srt) from MKV files using Whisper + Google Translate"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "openai-whisper",
    "deep-translator>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[project.scripts]
mkv2srt = "mkv2srt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mkv2srt*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.ruff]
line-length = 99
target-version = "py310"
