[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "translatarr"
version     = "1.0.7"
description = "Generate subtitles (.srt) from MKV files using Whisper + Google Translate"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "faster-whisper>=1.0",
    "deep-translator>=1.9",
    "flask>=3.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[project.scripts]
translatarr = "translatarr_web.translatarr:main"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["translatarr*", "translatarr_web*"]

[tool.setuptools.package-data]
translatarr_web = ["static/**/*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
pythonpath   = ["backend"]

[tool.ruff]
line-length = 99
target-version = "py310"
